[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://player.gd" type="Script" id=51]

[sub_resource type="CapsuleShape2D" id=1]
radius = 48.0
height = 144.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 120 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 48.0
height = 128.0

[node name="RigidBody2D" type="KinematicBody2D"]
script = ExtResource( 51 )
run_speed = 400

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "attack"
frame = 6
playing = true

[node name="player" type="CollisionShape2D" parent="."]
position = Vector2( 0, 40 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Kosa",
]]
gravity = 0.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D" groups=[
"Kosa",
]]
position = Vector2( 176, 24 )
shape = SubResource( 2 )
disabled = true

[node name="Area2D2" type="Area2D" parent="." groups=[
"player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2" groups=[
"player",
]]
position = Vector2( 0, 40 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D2_area_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
